--- a/css/styles.css
+++ b/css/styles.css
@@ -1,174 +1,209 @@
-*{
-  margin: 0;
-  padding:0;
+@import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Montserrat:wght@100;700&display=swap');
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+
 }
+
+section {
+    width: 100%;
+}
+
 body {
-  font-family: Circular-Bold, "Circular Std", Helvetica, sans-serif;
+    position: relative;
+    background-color: #01012a;
 
 }
 
+li,
+a {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 1.6rem;
+    color: white;
+    text-decoration: none;
 
-.opening {
-  background-color: black;
-  width: 100%;
-  height: 100vh;
-}
-.noah-tag {
-  color: white;
-}
-.header-opening {
-  color: white;
-  text-align: center;
-  padding-top: 20%;
-  font-size: 90px;
-  font-family: Circular-Bold, "Circular Std", Helvetica, sans-serif;
-}
-.second-section {
-  background-color: white;
-  width: 100%;
-  height: 70vh;
-  margin-right: 0;
-}
-.black-div {
-  background-color: black;
-  width: 60%;
-  height: 60vh;
-  margin-left: 608px;
-  margin-top: 40px;
-  position: absolute;
-;
-}
-.about-me {
-  padding: 50px;
-  color: #83FFE6;
-  font-family: Circular-Bold, "Circular Std", Helvetica, sans-serif;
-  font-size: 60px;
-  padding-bottom: 0;
-}
-.information-png {
-  display: inline-block;
-  width: 250px;
-  height: auto;
-  position: absolute;
-  margin: 120px;
 
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 p {
-  color: white;
-  font-family: Circular-Bold, "Circular Std", Helvetica, sans-serif;
-  padding: 50px;
-  padding-top: 0;
-  font-size: 40px;
-  line-height: 1.5;
-}
-.third-section {
-  background-color: black;
-  width: 100%;
-  height: 66vh;
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
-.navy-div {
-  background-color: white;
-  width: 60%;
-  height: 50%;
-  margin: 60px;
-  margin-left: 0;
-  position: absolute;
-
+h4 {
+    color: white;
+    text-align: center;
 }
 
-.skills-image {
-  position: absolute;
-  right: 3px;
-  margin: 50px;
-  width: 40px;
-  height: auto;
+.logo {
+    width: 5%;
+    cursor: pointer;
+    margin: 0rem 4rem;
 }
 
-.skills {
-  color: #2C2727;
-  padding: 50px;
-  font-family: Circular-Bold, "Circular Std", Helvetica, sans-serif;
-  font-size: 50px;
-}
 
-.html-image {
-  position: absolute;
-  width: 120px;
-  height: auto;
-  margin: 30px;
-  margin-top: 0;
-  display: inline-block;
-}
-.css-image {
-  position: absolute;
-  width: 90px;
-  height: auto;
-  margin: 30px;
-  margin-top: 0;
-  margin-left: 200px;
-
-}
-.skills-img{
-  position: absolute;
-  margin-left: 400px;
-  margin-top: 50px;
-  right: 40px;
-  width: 400px;
-  height: auto;
-
-}
-.python-image {
-  position: absolute;
-  width: 140px;
-  height: auto;
-  margin-left:350px;
-  margin-bottom: 120px;
-}
-.java-image {
-  position: absolute;
-  width: 130px;
-  height: auto;
-  margin-left:540px;
-  margin-bottom: 150px;
+.nav-links li {
+    display: inline-block;
+    padding: 2.0rem;
 
 }
 
-.fourth-section {
-  background-color: white;
-  width: 95%;
-  height: auto;
-  margin: 40px;
-  text-align: center;
+.nav-links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav-links li a:hover {
+    color: #5834cf;
 
 }
-.get-in-touch {
-  font-size: 50px;
-  color: black;
+
+.intro {
+    position: relative;
+    height: 90vh;
 }
-.p2 {
-  color: black;
-  font-size: 20px;
+
+.opening-div-purple {
+    width: 60%;
+    height: min-content;
+    background-color: #5902EC;
+    position: absolute;
+    padding: 1rem;
+    padding-bottom: 4rem;
+    margin-left: 4rem;
+    margin-top: 4rem;
 
 }
-.text-div {
-  text-align: center;
-  margin-bottom: 0;
+
+.charles-noah {
+    font-size: 8rem;
+    align-items: center;
+    font-weight: 500;
+    color: white;
+
 }
-.github-icon {
-  width: 60px;
-  display: inline-block;
+
+.opening-div-orange {
+    background-color: #C74B50;
+    width: 60%;
+    height: min-content;
+    position: absolute;
+    margin-left: 12rem;
+    margin-top: 15rem;
+    padding: 3rem;
+    text-align: center;
 
 
 }
-.linkedin {
-  width: 120px;
-  margin-left: 20px;
-  display: inline-block;
+
+.life-long {
+    font-size: 4rem;
+    font-weight: 500;
+    color: white;
+
 }
-.facebook-icon {
-  width: 120px;
-  margin-bottom: 20px;
-  margin-right: 20px;
+.opening-div-purple, 
+.opening-div-orange {
+    border-style: solid;
+
+}
+
+.about-me-section,
+.skill-section,
+.projects-section,
+.contact-me-section {
+    position: relative;
+    padding: 4rem;
+    height: 80vh;
+
+
+}
+
+.About-me,
+.my-skills,
+.projects {
+    background-color: #5902EC;
+    width: 30%;
+    height: fit-content;
+    font-size: 2rem;
+    padding: 1rem;
+    text-align: center;
+    position: absolute;
+    margin-left: 1rem;
+    border-style: solid;
+
+
+}
+
+.about-me,
+.h3-my-skills,
+.my-projects {
+    font-weight: bold;
+    color: white;
+}
+
+.about-me-p,
+.the-skills,
+.projects-container {
+    height: fit-content;
+    width: 91%;
+    margin-top: 2rem;
+    background-color: #83b7e4;
+    padding: 3rem 5rem;
+    z-index: -1;
+    position: absolute;
+}
+
+.my-skills {
+    position: absolute;
+    right: 0;
+    margin-right: 5rem;
+}
+
+.the-skills {
+    background-color: #57dd88;
+    /* display: flex;
+    justify-content: center; */
+}
+
+.skills-pic {
+    width: 10%;
+    margin: 2em;
+}
+
+.skill-section {
+    height: 65vh;
+}
+
+.projects-container {
+    background-color: #dac25c  ;
+}
+
+.contact-me-section {
+    margin: 0;
+    padding: 1em;
+    height: 20vh;
+    background-color: #5902EC;
+}
+.social-media-logos,
+.anc-tag {
+    width: 100%;
+    display:flex;
+    justify-content: center;
+    margin-top: 0.5em;
+}
+.footer-logo {
+    
+    width: 10%;
+    padding: 0;
+ 
 }
